# market-simulation

./: .gitignore  CMakeLists.txt
docs/: Doxygen.html — skrót.lnk
docs/html/: _customer_8h_source.html  _guard_8h_source.html  _inventory_8h_source.html  _map_8h_source.html  _person_8h_source.html  _random_8h_source.html  _shopkeeper_8h_source.html  _simulation_8h_source.html  _thief_8h_source.html  annotated.html  class_customer-members.html  class_customer.html  class_guard-members.html  class_guard.html  class_inventory-members.html  class_inventory.html  class_item-members.html  class_item.html  class_map-members.html  class_map.html  class_person-members.html  class_person.html  class_position-members.html  class_position.html  class_random-members.html  class_random.html  class_shopkeeper-members.html  class_shopkeeper.html  class_simulation-members.html  class_simulation.html  class_thief-members.html  class_thief.html  classes.html  dir_2fd3eb1440e4e468f90e9620d5b8dd12.html  dir_4eed152803ee1b08465e8ef625c7146d.html  dir_50cc58f0077e633cbb2154058afd546c.html  dir_5aa5982c6232799953ef37fc898d0b24.html  (+9 more)
src/: CMakeLists.txt  Customer.cpp  Customer.h  Guard.cpp  Guard.h  Inventory.cpp  Inventory.h  Map.cpp  Map.h  Person.cpp  Person.h  Random.cpp  Random.h  Shopkeeper.cpp  Shopkeeper.h  Simulation.cpp  Simulation.h  Specimens.cpp  Specimens.h  Thief.cpp  Thief.h  main.cpp  simple_test.cpp  simple_test.h
tests/: CMakeLists.txt  Customer-test.cpp  Inventory-test.cpp  Map-test.cpp  Person-test.cpp  Shopkeeper-test.cpp  Simulation-test.cpp  simple_test_test.cpp
(+33 files in other folders)
